feat: criacao de um endpoint /health/deep para consulta humana
